# scheduler

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  custom.css  index.rst
scheduler/: __main__.py
scheduler/importers/: __init__.py  calendarium.py  pdf.py
scheduler/types/: __init__.py  course.py  ellipsis.py  room.py  shift.py  student.py  timeslot.py  weekday.py
tests/: test_course.py  test_room.py  test_shift.py  test_student.py  test_timeslot.py  test_weekday.py
tests/types/: test_course.py  test_ellipsis.py  test_room.py  test_shift.py  test_student.py  test_timeslot.py  test_weekday.py
